--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "elhassu.com",
+  "homepage": "www.elhassu.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -10,6 +12,7 @@
     "craco": "^0.0.3",
     "craco-alias": "^3.0.1",
     "date-fns": "^2.30.0",
+    "gh-pages": "^6.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
@@ -18,6 +21,8 @@
   },
   "scripts": {
     "start": "craco start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "craco build",
     "test": "craco test",
     "eject": "craco eject"
