--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "craco": "^0.0.3",
     "craco-alias": "^3.0.1",
     "date-fns": "^2.30.0",
+    "firebase": "^10.4.0",
     "gh-pages": "^6.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
